--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/backimagedarkcave" />
+        app:srcCompat="@drawable/backimagedarkcave" />
 
     <ImageButton
         android:id="@+id/image2"
         android:layout_width="411dp"
         android:layout_height="83dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu"
+        app:layout_constraintTop_toBottomOf="@+id/enemyImage"
         app:srcCompat="@android:drawable/screen_background_light" />
 
     <ImageButton
@@ -49,7 +50,7 @@
         android:layout_marginEnd="8dp"
         android:text="メニュー"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.949"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,11 +128,12 @@
         android:id="@+id/imageView5"
         android:layout_width="111dp"
         android:layout_height="110dp"
-        android:layout_marginStart="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image3"
-        app:layout_constraintVertical_bias="0.14"
+        app:layout_constraintVertical_bias="0.084"
         app:srcCompat="@drawable/saikoro_145" />
 
     <Button
@@ -147,13 +149,27 @@
         app:layout_constraintVertical_bias="0.172" />
 
     <TextView
+        android:id="@+id/masucount"
+        android:layout_width="58dp"
+        android:layout_height="40dp"
+        android:text="30"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/enemyImage"
+        app:layout_constraintEnd_toStartOf="@+id/menu"
+        app:layout_constraintHorizontal_bias="0.746"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.727" />
+
+    <TextView
         android:id="@+id/textView7"
         android:layout_width="163dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="12dp"
         android:text="ボスマスまであと"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/enemyImage"
         app:layout_constraintEnd_toStartOf="@+id/menu"
@@ -162,25 +178,29 @@
 
     <TextView
         android:id="@+id/masu_num2"
-        android:layout_width="58dp"
-        android:layout_height="36dp"
+        android:layout_width="57dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="18dp"
         android:text="マス"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/enemyImage"
         app:layout_constraintEnd_toStartOf="@+id/menu"
-        app:layout_constraintHorizontal_bias="0.991"
+        app:layout_constraintHorizontal_bias="0.987"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/enemyImage"
         android:layout_width="411dp"
-        android:layout_height="202dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        android:layout_height="210dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/image4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/recture" />
 
     <TextView
         android:id="@+id/result"
@@ -191,19 +211,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <TextView
-        android:id="@+id/masucount"
-        android:layout_width="58dp"
-        android:layout_height="40dp"
-        android:text="0"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/enemyImage"
-        app:layout_constraintEnd_toStartOf="@+id/menu"
-        app:layout_constraintHorizontal_bias="0.742"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.533" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
