--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -30,7 +30,7 @@
         app:layout_constraintVertical_bias="0.611" />
 
     <Button
-        android:id="@+id/tiytlebtn"
+        android:id="@+id/titlebtn"
         android:layout_width="290dp"
         android:layout_height="60dp"
         android:background="#9C7C7C"
