--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
         app:layout_constraintTop_toTopOf="@+id/image3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/usepo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
