--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -502,4 +502,16 @@
         app:layout_constraintVertical_bias="0.846"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <ImageView
+        android:id="@+id/attackefect"
+        android:layout_width="169dp"
+        android:layout_height="108dp"
+        android:background="#00FFFFFF"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/enemyImage"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/enemyImage"
+        app:srcCompat="@drawable/attackeffect" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
