--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -514,4 +514,30 @@
         app:layout_constraintTop_toTopOf="@+id/enemyImage"
         app:srcCompat="@drawable/effect0" />
 
+    <ImageView
+        android:id="@+id/damage_color"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#930000"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/image2"
+        app:layout_constraintVertical_bias="0.746"
+        tools:src="@android:color/holo_red_dark"
+        tools:srcCompat="@android:color/holo_red_dark" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/yohaku" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
