--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -380,11 +380,13 @@
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
+        android:background="#00FFFFFF"
         android:src="@drawable/maou"
         app:layout_constraintHeight_percent="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.42" />
+        app:layout_constraintWidth_percent="0.42"
+        app:srcCompat="@drawable/maou2" />
 
     <TextView
         android:id="@+id/textView17"
